# user-hotdeal-bot

./: .gitignore  Dockerfile  Dockerfile.backup  Dockerfile.flaretunnel  README.md  config.example.yaml  docker-compose.local.example.yml  docker-compose.prod.example.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
alembic/: env.py
alembic/versions/: 241cc117ff16_initial_migration.py  c1a2b3d4e5f6_migrate_article_id_to_ulid.py  d8013109febc_add_api_key_rate_limits_table.py
ops/: backup-entrypoint.sh
scripts/: mariadb_backup.sh
src/: __init__.py  bot.py  datetime_utils.py  main.py  version.py
src/api/: __init__.py  deps.py  main.py  schemas.py
src/api/routes/: __init__.py  articles.py  crawlers.py  feed.py
src/crawler/: __init__.py  arcalive.py  base_crawler.py  dummy.py
src/db/: __init__.py  models.py  repository.py  session.py  time.py
src/tools/: crawler.py
tests/: test_api_articles.py  test_api_auth.py  test_api_feed.py  test_article_collection.py  test_backup_script.py  test_bot.py  test_crawler_config.py  test_crawlers.py  test_db_backfill.py  test_db_session.py  test_examples.py  test_main.py  test_rate_limits.py
