[project]
name = "user-hotdeal-bot"
version = "2.2.1"
description = "한국 커뮤니티 사이트 핫딜 게시판 크롤링 및 메신저 전송 봇"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10.10",
    "aiomysql>=0.3.2",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "beautifulsoup4>=4.12.3",
    "curl-cffi>=0.15.0",
    "fastapi>=0.115.0",
    "feedgen>=1.0.0",
    "logfire[aiohttp]>=0.30.0",
    "pymysql>=1.1.1",
    "python-telegram-bot>=21.6",
    "python-ulid>=3.1.0",
    "pyyaml>=6.0.2",
    "scrapling[fetchers]>=0.4.9",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "coverage>=7.6.4",
    "pre-commit>=3.8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff>=0.9.0",
    "typer>=0.12.5",
]

[tool.ruff]
include = [
    "pyproject.toml",
    "src/**/*.py",
    "tests/**/*.py",
]
line-length = 120

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",    # isort
]
ignore = [
    "E501",  # line too long
    # "F401",  # module imported but unused
    "F841",  # local variable is assigned to but never used
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
